add basic routes

--- a/Backend_Course/package.json
+++ b/Backend_Course/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "backendIt",
+  "name": "backend_It",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
