--- a/yt_backend_course/backend_project-1/package.json
+++ b/yt_backend_course/backend_project-1/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "complex backend project",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -16,5 +17,10 @@
   "devDependencies": {
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0"
   }
 }
