--- a/yt_backend_course/backend_project-1/.env.sample
+++ b/yt_backend_course/backend_project-1/.env.sample
@@ -1,2 +1,3 @@
-PORT="PORT"
-MONGODB_URL= "your custom url"
+PORT=8000
+MONGODB_URL= mongodb+srv://abhiraj:<your-password>@cluster0.snqeppk.mongodb.net
+CORS_ORIGIN=*
