--- a/yt_backend_course/backend_project-1/.env.sample
+++ b/yt_backend_course/backend_project-1/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URL= mongodb+srv://abhiraj:<your-password>@cluster0.snqeppk.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET =Your-jwt-token
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=your-refresh-token
+REFRESH_TOKEN_EXPIRY=10d
