--- a/OAuth Node/package.json
+++ b/OAuth Node/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
