--- a/Jobspire/package.json
+++ b/Jobspire/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.12",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
