--- a/Jobspire/package.json
+++ b/Jobspire/package.json
@@ -21,7 +21,8 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.12",
     "uuid": "^9.0.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
