--- a/Jobspire/package.json
+++ b/Jobspire/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.3",
     "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.12",
