--- a/Jobspire/package.json
+++ b/Jobspire/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.2.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.2.1",
@@ -24,6 +26,7 @@
     "nodemailer": "^6.9.12",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
+    "xss-clean": "^0.1.4",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
